# libargp

./: CMakeLists.txt  README.md  extract_libargp_lgpl_from_gnulib.sh
.github/workflows/: macos-build.yaml  ubuntu-build.yaml  windows-build.yaml
cmake/: build-libargp.cmake
include/: argp-config.h
src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/gllib/: Makefile.am  Makefile.in  argp.h
src/glm4/: Makefile.am  Makefile.in  gnulib-cache.m4  gnulib-comp.m4  strchrnul.m4
test/: test1.c
